styles.css
/* Fonts */
@import url('https://fonts.googleapis.com/css?family=Raleway:200,400,600');
body { font-family: 'Raleway', sans-serif; }
.fw-6 { font-weight: 600; }
.fw-4 { font-weight: 400; }
.fw-2 { font-weight: 200; }
.f-it { font-style: italic; }
.f-black { color:#1c1c1c; }
.f-white { color:#ffffff; }
.fs-1 { font-size:1em; }    /* Use in menus and such */
.fs-2 { font-size:1.1em; }
.fs-3 { font-size:1.2em; }  /* Use for texts */
.fs-4 { font-size:1.4em; }  
.fs-5 { font-size:1.6em; }  /* Use for titles */
.fs-6 { font-size:1.8em; }
.flh-1 { line-height: 1em; }
.flh-2 { line-height: 1.1em; }
.flh-3 { line-height: 1.2em; }
.f-inherit { font-family: inherit !important; }

/* Icons */


/* Links */
a { text-decoration: none ; color:inherit ; }
a:hover { text-decoration: none ; color:inherit ; }
a:visited { text-decoration: none ; color:inherit ; }

/* Viewports */
.vh-100 { min-height: 100vh ; }
.vh-90 { min-height: 90vh ; }
.vh-85 { min-height: 85vh ; }
.vh-80 { min-height: 80vh ; }
.vh-75 { min-height: 75vh ; }
.vh-70 { min-height: 70vh ; }
.vh-60 { min-height: 60vh ; }
.vh-50 { min-height: 50vh ; }
.vh-40 { min-height: 40vh ; }
.vh-30 { min-height: 30vh ; }
.vh-20 { min-height: 20vh ; }
.vh-15 { min-height: 15vh ; }
.vh-10 { min-height: 10vh ; }

.vw-100 { min-width: 100vw ; }
.vw-75 { min-width: 75vw ; }
.vw-50 { min-width: 50vw ; }
.vw-25 { min-width: 25vw ; }
.vw-10 { min-width: 10vw ; }

/* Spacers */
.spacer-2 { min-height: 2vh; }
.spacer-4 { min-height: 4vh; }
.spacer-6 { min-height: 6vh; }
.spacer-8 { min-height: 8vh; }

/* Colors */
.black { background-color: #1c1c1c; }
.orange { background-color: #f47d3d; }
.light-orange { background-color: #f2874d; }
.white { background-color: white; }
.blue { background-color: #41516b; }

/* Cursors */
.cp { cursor: pointer; }
.cd { cursor: no-drop; }

/* Colors */
.dark-primary-color    { background: #1976D2; }
.default-primary-color { background: #2196F3; }
.light-primary-color   { background: #BBDEFB; }
.text-primary-color    { color: #FFFFFF; }
.accent-color          { background: #f2f2f2; }
.primary-text-color    { color: #212121; }
.secondary-text-color  { color: #757575; }
.divider-color         { border-color: #BDBDBD; }


/* Customs */

.nav
{
    -webkit-box-shadow: 0px 2px 2px 0px rgba(28,28,28,0.4);
    -moz-box-shadow: 0px 2px 2px 0px rgba(28,28,28,0.4);
    box-shadow: 0px 2px 2px 0px rgba(28,28,28,0.4);
}

.side
{
    -webkit-box-shadow: -2px 0px 2px 0px rgba(28,28,28,0.4);
    -moz-box-shadow: -2px 0px 2px 0px rgba(28,28,28,0.4);
    box-shadow: -2px 0px 2px 0px rgba(28,28,28,0.4);
}

input[type=text],input[type=password],input[type=number] {
    color: inherit;
	font: inherit ;
	font-weight: inherit;
	width: 100% ;
	border: none;
    border-bottom: 1px solid #1c1c1c;
    background: none;
}

input[type=text]:focus,input[type=password]:focus,input[type=number]:focus {
    border: none;
    border-bottom: 1px solid #1976D2;
    background: none;
    outline:none;
}

input[type=submit] {
    padding:5px 15px; 
    background:#ccc; 
    border:0 none;
    cursor:pointer;
    -webkit-border-radius: 5px;
    border-radius: 5px; 
}

.no-button
{
    background:none;
    border:none;
    font: inherit;
    cursor: pointer;
}

